--- a/app/src/main/res/layout/activity_course_screen.xml
+++ b/app/src/main/res/layout/activity_course_screen.xml
@@ -31,10 +31,17 @@
     </RelativeLayout>
 
     <ScrollView
-        android:id="@id/marks_view"
+        android:id="@id/marks_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8">
+
+        <LinearLayout
+            android:id="@+id/marks_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+        </LinearLayout>
 
 
     </ScrollView>
